syntax = "proto3";

package calculator.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/belo4ya/edu-dist-calculate-api/pkg/calculator/v1;v1";

// Public Calculator service
service CalculatorService {
  // Add arithmetic expression for calculation
  rpc Calculate(CalculateRequest) returns (CalculateResponse) {
    option (google.api.http) = {
      post: "/api/v1/calculate"
      body: "*"
    };
  }

  // Get list of expressions
  rpc ListExpressions(google.protobuf.Empty) returns (ListExpressionsResponse) {
    option (google.api.http) = {get: "/api/v1/expressions"};
  }

  // Get expression by its identifier
  rpc GetExpression(GetExpressionRequest) returns (GetExpressionResponse) {
    option (google.api.http) = {get: "/api/v1/expressions/{id}"};
  }
}

// Expression calculation status
enum ExpressionStatus {
  EXPRESSION_STATUS_UNSPECIFIED = 0;
  EXPRESSION_STATUS_PENDING = 1;
  EXPRESSION_STATUS_IN_PROGRESS = 2;
  EXPRESSION_STATUS_COMPLETED = 3;
  EXPRESSION_STATUS_FAILED = 4;
}

// Request for expression calculation
message CalculateRequest {
  string expression = 1;
}

// Response with expression identifier
message CalculateResponse {
  string id = 1;
}

// Expression information
message Expression {
  string id = 1;
  ExpressionStatus status = 2;
  double result = 3;
}

// List of expressions
message ListExpressionsResponse {
  repeated Expression expressions = 1;
}

// Request for expression by identifier
message GetExpressionRequest {
  string id = 1;
}

// Response with expression information
message GetExpressionResponse {
  Expression expression = 1;
}
